--- a/package.json
+++ b/package.json
@@ -3,24 +3,28 @@
   "version": "1.0.0",
   "main": "expo-router/entry",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~53.0.11",
+    "expo": "^53.0.12",
+    "expo-constants": "~17.1.6",
+    "expo-dev-client": "^5.2.1",
+    "expo-linking": "~7.1.5",
+    "expo-router": "~5.1.0",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
-    "react-native": "0.79.3",
-    "expo-router": "~5.1.0",
+    "react-native": "0.79.4",
+    "react-native-appwrite": "^0.10.0",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "expo-linking": "~7.1.5",
-    "expo-constants": "~17.1.6"
+    "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@react-native-community/cli": "^18.0.0"
   },
   "private": true
 }
