--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
 const EXPO_PUBLIC_APPWRITE_PROJECT_ID = "685c7363003bffd3ee80";
 const EXPO_PUBLIC_APPWRITE_ENDPOINT = "https://fra.cloud.appwrite.io/v1";
+
+DATABASE_ID = "6864e2f1001ad174bf85";
+
+TRIP_COLLECTION_ID = "6864e32f000f2d266152";
+ORDER_COLLECTION_ID = "6864e38800014e6a4fdd";
         
